[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcade-job-pipeline"
version = "0.1.0"
description = "Job search pipeline agent powered by Arcade.dev, Gmail, and Google Sheets"
requires-python = ">=3.11"
dependencies = [
    "arcade-ai>=0.1.0",
    "anthropic>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
job-pipeline = "agent:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
